--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
 
     <div class="grafica-card">
-      <h2>Gráfica 6: (Por definir)</h2>
+      <h2>Rating de usuarios y críticos.</h2>
       <div id="grafica6" class="grafica-placeholder">Cargando...</div>
     </div>
   </div>
