--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="graficas-container">
         <div id="grafica1-container" class="grafica-card">
-            <h2> Ventas Globales por Ranking</h2>
+            <h2> Descargas Globales por Rating</h2>
             <div id="grafica1" class="grafica-placeholder">Cargando...</div>
         </div>
 
